--- a/test_01/templates/base.html
+++ b/test_01/templates/base.html
@@ -18,7 +18,7 @@
                     <input type="text" name="title" placeholder="Enter ToDo task...">
                     <br>
                 </div>
-                <button class="ui blue button" type="submit">Add</button>
+                <button class="ui yellow button" type="submit">Add</button>
             </form>
 
             <hr>
@@ -28,7 +28,7 @@
                 <p class="ui big header">{{ todo.id }} | {{ todo.title }}</p>
 
                 {% if todo.complete == False %}
-                <span class="ui gray label">Not Complete</span>
+                <span class="ui black label">Not Complete</span>
                 {% else %}
                 <span class="ui green label">Complete</span>
                 {% endif %}
